seedbox/jellyfin/endpoints.yml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
  namespace: seedbox
subsets:
  - addresses:
      - ip: 192.168.11.105
    ports:
      - port: 8096
        name: http
